--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <div class="app">
         <button>Click</button>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
